--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,12 @@
     <string name="terms">Terms</string>
     <string name="courses">Courses</string>
     <string name="assessments">Assessments</string>
+    <string name="term_title">Term Title</string>
+    <string name="end_date">End Date:</string>
+    <string name="start_date">Start Date:</string>
+    <string name="end">End</string>
+    <string name="start">Start</string>
+    <string name="assessment_name">Assessment Name</string>
     <string-array name="status_array">
         <item>In Progress</item>
         <item>Completed</item>
